content/_generated-doc/2.7/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-rest-client-restclient-config-rest-clients-config_configuration]]link:#quarkus-rest-client-restclient-config-rest-clients-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.disable-smart-produces]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.disable-smart-produces[quarkus.rest-client.disable-smart-produces]`

[.description]
--
By default, REST Client Reactive uses text/plain content type for String values and application/json for everything else. MicroProfile Rest Client spec requires the implementations to always default to application/json. This build item disables the "smart" behavior of RESTEasy Reactive to comply to the spec. This property is applicable to reactive REST clients only.
--|boolean 
|`false`


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.multipart-post-encoder-mode]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.multipart-post-encoder-mode[quarkus.rest-client.multipart-post-encoder-mode]`

[.description]
--
Mode in which the form data are encoded. Possible values are `HTML5`, `RFC1738` and `RFC3986`. The modes are described in the link:https://netty.io/4.1/api/io/netty/handler/codec/http/multipart/HttpPostRequestEncoder.EncoderMode.html[Netty documentation] By default, Rest Client Reactive uses RFC1738. This property is applicable to reactive REST clients only.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.proxy-address]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.proxy-address[quarkus.rest-client.proxy-address]`

[.description]
--
A string value in the form of `:` that specifies the HTTP proxy server hostname (or IP address) and port for requests of clients to use. Can be overwritten by client-specific settings This property is applicable to reactive REST clients only.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.proxy-user]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.proxy-user[quarkus.rest-client.proxy-user]`

[.description]
--
Proxy username, equivalent to the http.proxy or https.proxy JVM settings. This property is applicable to reactive REST clients only.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.proxy-password]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.proxy-password[quarkus.rest-client.proxy-password]`

[.description]
--
Proxy password, equivalent to the http.proxyPassword or https.proxyPassword JVM settings. This property is applicable to reactive REST clients only.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.non-proxy-hosts]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.non-proxy-hosts[quarkus.rest-client.non-proxy-hosts]`

[.description]
--
Hosts to access without proxy, similar to the http.nonProxyHosts or https.nonProxyHosts JVM settings. Please note that unlike the JVM settings, this property is empty by default This property is applicable to reactive REST clients only.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.logging.scope]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.logging.scope[quarkus.rest-client.logging.scope]`

[.description]
--
Scope of logging for the client. 
 WARNING: beware of logging sensitive data 
 The possible values are:  
 - `request-response` - enables logging request and responses, including redirect responses 
 - `all` - enables logging requests and responses and lower-level logging 
 - `none` - no additional logging  This property is applicable to reactive REST clients only.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.logging.body-limit]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.logging.body-limit[quarkus.rest-client.logging.body-limit]`

[.description]
--
How many characters of the body should be logged. Message body can be large and can easily pollute the logs. By default, set to 100. This property is applicable to reactive REST clients only.
--|int 
|`100`


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.connect-timeout]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.connect-timeout[quarkus.rest-client.connect-timeout]`

[.description]
--
Global default connect timeout for automatically generated REST Clients. The attribute specifies a timeout in milliseconds that a client should wait to connect to the remote endpoint.
--|long 
|`15000`


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.read-timeout]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.read-timeout[quarkus.rest-client.read-timeout]`

[.description]
--
Global default read timeout for automatically generated REST Clients. The attribute specifies a timeout in milliseconds that a client should wait for a response from the remote endpoint.
--|long 
|`30000`


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.url]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.url[quarkus.rest-client."config-key".url]`

[.description]
--
The base URL to use for this service. This property or the `uri` property is considered required, unless the `baseUri` attribute is configured in the `@RegisterRestClient` annotation.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.uri]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.uri[quarkus.rest-client."config-key".uri]`

[.description]
--
The base URI to use for this service. This property or the `url` property is considered required, unless the `baseUri` attribute is configured in the `@RegisterRestClient` annotation.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.scope]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.scope[quarkus.rest-client."config-key".scope]`

[.description]
--
The CDI scope to use for injection. This property can contain either a fully qualified class name of a CDI scope annotation (such as "javax.enterprise.context.ApplicationScoped") or its simple name (such as "ApplicationScoped").
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.providers]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.providers[quarkus.rest-client."config-key".providers]`

[.description]
--
Map where keys are fully-qualified provider classnames to include in the client, and values are their integer priorities. The equivalent of the `@RegisterProvider` annotation.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.connect-timeout]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.connect-timeout[quarkus.rest-client."config-key".connect-timeout]`

[.description]
--
Timeout specified in milliseconds to wait to connect to the remote endpoint.
--|long 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.read-timeout]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.read-timeout[quarkus.rest-client."config-key".read-timeout]`

[.description]
--
Timeout specified in milliseconds to wait for a response from the remote endpoint.
--|long 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.follow-redirects]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.follow-redirects[quarkus.rest-client."config-key".follow-redirects]`

[.description]
--
A boolean value used to determine whether the client should follow HTTP redirect responses.
--|boolean 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.proxy-address]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.proxy-address[quarkus.rest-client."config-key".proxy-address]`

[.description]
--
A string value in the form of `:` that specifies the HTTP proxy server hostname (or IP address) and port for requests of this client to use. Use `none` to disable proxy
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.proxy-user]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.proxy-user[quarkus.rest-client."config-key".proxy-user]`

[.description]
--
Proxy username. This property is applicable to reactive REST clients only.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.proxy-password]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.proxy-password[quarkus.rest-client."config-key".proxy-password]`

[.description]
--
Proxy password. This property is applicable to reactive REST clients only.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.non-proxy-hosts]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.non-proxy-hosts[quarkus.rest-client."config-key".non-proxy-hosts]`

[.description]
--
Hosts to access without proxy This property is applicable to reactive REST clients only.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.query-param-style]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.query-param-style[quarkus.rest-client."config-key".query-param-style]`

[.description]
--
An enumerated type string value with possible values of "MULTI_PAIRS" (default), "COMMA_SEPARATED", or "ARRAY_PAIRS" that specifies the format in which multiple values for the same query parameter is used.
--|`multi-pairs`, `comma-separated`, `array-pairs` 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.trust-store]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.trust-store[quarkus.rest-client."config-key".trust-store]`

[.description]
--
The trust store location. Can point to either a classpath resource or a file.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.trust-store-password]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.trust-store-password[quarkus.rest-client."config-key".trust-store-password]`

[.description]
--
The trust store password.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.trust-store-type]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.trust-store-type[quarkus.rest-client."config-key".trust-store-type]`

[.description]
--
The type of the trust store. Defaults to "JKS".
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.key-store]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.key-store[quarkus.rest-client."config-key".key-store]`

[.description]
--
The key store location. Can point to either a classpath resource or a file.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.key-store-password]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.key-store-password[quarkus.rest-client."config-key".key-store-password]`

[.description]
--
The key store password.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.key-store-type]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.key-store-type[quarkus.rest-client."config-key".key-store-type]`

[.description]
--
The type of the key store. Defaults to "JKS".
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.hostname-verifier]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.hostname-verifier[quarkus.rest-client."config-key".hostname-verifier]`

[.description]
--
The class name of the host name verifier. The class must have a public no-argument constructor.
--|string 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.connection-ttl]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.connection-ttl[quarkus.rest-client."config-key".connection-ttl]`

[.description]
--
The time in ms for which a connection remains unused in the connection pool before being evicted and closed. A timeout of `0` means there is no timeout.
--|int 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.connection-pool-size]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.connection-pool-size[quarkus.rest-client."config-key".connection-pool-size]`

[.description]
--
The size of the connection pool for this client.
--|int 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.max-redirects]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.max-redirects[quarkus.rest-client."config-key".max-redirects]`

[.description]
--
The maximum number of redirection a request can follow. This property is applicable to reactive REST clients only.
--|int 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.headers-headers]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.headers-headers[quarkus.rest-client."config-key".headers]`

[.description]
--
The HTTP headers that should be applied to all requests of the rest client.
--|`Map<String,String>` 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.shared]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.shared[quarkus.rest-client."config-key".shared]`

[.description]
--
Set to true to share the HTTP client between REST clients. There can be multiple shared clients distinguished by *name*, when no specific name is set, the name `__vertx.DEFAULT` is used. This property is applicable to reactive REST clients only.
--|boolean 
|


a| [[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.name]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.name[quarkus.rest-client."config-key".name]`

[.description]
--
Set the HTTP client name, used when the client is shared, otherwise ignored. This property is applicable to reactive REST clients only.
--|string 
|

|===